[gd_scene load_steps=6 format=3 uid="uid://bpbxl634kt5sd"]

[ext_resource type="Script" uid="uid://bxir423lfn0b" path="res://clouds/cloud_platform.gd" id="1_f4ja7"]
[ext_resource type="PackedScene" uid="uid://cuqyw5f1xrqgu" path="res://clouds/cloud_parts.tscn" id="2_lkia1"]
[ext_resource type="Texture2D" uid="uid://bvf514u5cm2d7" path="res://assets/full_cloud.png" id="3_us7hx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4ja7"]
size = Vector2(140, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k72l2"]
size = Vector2(300, 150)

[node name="Cloud Platform" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_f4ja7")
parts_scene = ExtResource("2_lkia1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f4ja7")
one_way_collision = true

[node name="FullCloud" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(1.515, 1.515)
texture = ExtResource("3_us7hx")

[node name="Player Detection Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detection Area"]
shape = SubResource("RectangleShape2D_k72l2")

[connection signal="body_entered" from="Player Detection Area" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="Player Detection Area" to="." method="_on_player_detection_area_body_exited"]
